code with nighthawk

--- a/Gone-Fishing_Mod8.Rmd
+++ b/Gone-Fishing_Mod8.Rmd
@@ -19,24 +19,22 @@ library(car) #for LME anova testing
 library(data.table) #for frollmean function (and others)
 ```
 ```{r, echo=FALSE}
-raven <- occ_data(scientificName = "Corvus corax", stateProvince="Maine", limit=200,year=2018)
+nighthawk <- occ_data(scientificName = "Chordeiles minor", stateProvince="Massachusetts", limit=200,year=2018)
 
-#get the state of ME from ggmaps map data
-ME<- map_data('state', 'maine')
+#get the state of MA from ggmaps map data
+MA<- map_data('state', 'massachusetts')
 
-raven.p <- ggplot(ME, aes(long,lat,group=subregion) )+
-  geom_polygon(colour = "gray",fill="gray90")+geom_point(data=raven[[2]],aes(x=decimalLongitude,y=decimalLatitude,size=individualCount),alpha=0.3,inherit.aes = F)+ coord_quickmap()+theme_void()
+nighthawk.p <- ggplot(MA, aes(long,lat,group=subregion) )+
+  geom_polygon(colour = "gray",fill="gray90")+geom_point(data=nighthawk[[2]],aes(x=decimalLongitude,y=decimalLatitude,size=individualCount),alpha=0.3,inherit.aes = F)+ coord_quickmap()+theme_void()
 
 #and add image to the map with cowplot
-raven.p2 <- ggdraw() +
-  draw_image("https://www.allaboutbirds.org/guide/assets/photo/63739491-480px.jpg",scale = 0.3,halign=0,valign=1) +
+nighthawk.p2 <- ggdraw() +
+  draw_image("https://cdn.download.ams.birds.cornell.edu/api/v1/asset/303958381/1800",scale = 0.3,halign=0.9,valign=1) +
   draw_plot(raven.p)
-print(raven.p2)
+print(nighthawk.p2)
 ```
 ```{r, include=FALSE}
-names(raven)
-lapply(raven,head)
-species <- c("Myiarchus crinitus","Icterus galbula","Pheucticus ludovicianus","Coccyzus americanus","Setophaga caerulescens")
+species <- c("Chordeiles minor","Piranga olivacea","Setophaga cerulea","Icterus galbula","Vireo olivaceus")
 
 y <- paste0("1990",",","2019")
 m <- paste0("3",",","6")
