--- a/Gone-Fishing_Mod8.Rmd
+++ b/Gone-Fishing_Mod8.Rmd
@@ -3,8 +3,18 @@ title: "Gone-Fishing_Mod8_Project"
 author: "Gone-Fishing"
 date: "2022-12-15"
 output: html_document
+bibliography: "biol3140.bib"
 ---
 ## Introduction
+The term trans-Gulf migrants or TGMs, refer to species of birds that fly non-stop over the Gulf of Mexico and arrive on land between Texas and Florida. They are part of a larger group of birds that undertake long-distance migrations from Central and South America to more temperate latitudes. 
+
+The time of arrival of these TGMs have quite a large effect on their rates of survival. One example of this is the red knot, or Calidris canutus rufa. In the spring, this species of bird travels from Tierra del Fuego to the Delaware Bay (a 30,000 km trip), and usually bulks up on horseshoe crab eggs in Delaware Bay before leaving to breed in Arctic polar deserts. From 1997-2002, a higher proportion of knots did not reach threshold departure masses, and the population size dropped from 51,000 to 37,000. This drop in population is assumed to be a result of birds arriving later in Delaware, after the horseshoe crab eggs had already been depleted.(@baker2004rapid)
+
+Other research has also shown that survival rates are reduced by cold weather and high density, (@cook2021temperature) and as climate change continues to cause abnormal temperature and weather fluctuation, TGM survival rate also fluctuates. 
+
+In 2002, Cornell Laboratory of Ornithology and the National Audubon society created a program called eBird that allows citizen scientists and birders to share their observations, creating a database for bird sightings. The creation of this program has the potential to be an incredibly important tool in the study of avian biology. 
+
+Our goal with this project is to use eBird and meteorological data to understand the effect of local weather conditions when TGMs arrive in Massachusetts. 
 
 ## Methods 
 
@@ -26,7 +36,7 @@ library(knitr)
 library(kableExtra) 
 ```
 
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
+```{r map of MA and nighthawk, echo=FALSE, warning=FALSE, message=FALSE}
 nighthawk <- occ_data(scientificName = "Chordeiles minor", stateProvince="Massachusetts", limit=200,year=2018)
 
 #get the state of MA from ggmaps map data
@@ -66,14 +76,14 @@ dat.l[[paste0(s)]] <- occ_data(scientificName = s,year=y,month=m,
 }
 ```
 
-```{r, eval=FALSE,echo=FALSE,warning=FALSE,message=FALSE}
+```{r, eval=FALSE,include=FALSE,warning=FALSE,message=FALSE}
 dat <- rbindlist(dat.l,fill=T)
 
 #saving data
 saveRDS(dat,"massbird.data.RDS")
 ```
 
-```{r,echo=FALSE,warning=FALSE,message=FALSE}
+```{r species count vs year,echo=FALSE,warning=FALSE,message=FALSE} 
 #year by year totals from occ_data()
 dat <- readRDS("massbird.data.RDS")
 
@@ -83,10 +93,10 @@ dat%>%
   ggplot(aes(x=year,y=count,col=species))+geom_point()
 ```
 
-```{r,echo=FALSE,warning=FALSE,message=FALSE}
+```{r,include=FALSE}
 options(noaakey = "KFLlRkFhiMsAjFqCwzjckZxHlDZjfFHA")
 sts <- c(
-  "GHCND:USW00013894", #Mobible, AL 2k away about 10 days away @200 km/day
+  "GHCND:USW00013894", #Mobile, AL 2k away about 10 days away @200 km/day
   "GHCND:USW00013881", #Charlotte, NC 1000 km away about 6 days away @200 km/day
   "GHCND:USW00014739" #Boston
 )
@@ -111,7 +121,7 @@ plot_usmap(
 )+geom_point(data=sta.d,aes(x=longitude.1,y=latitude.1,col=name),size=5)+geom_label(data=sta.d,aes(x=longitude.1,y=latitude.1,col=name,label=name),size=5,nudge_x = 1e6*0.25)+theme(legend.position = "none")
 ```
 
-```{r, include=FALSE, cache=TRUE,warning=FALSE,message=FALSE}
+```{r, include=FALSE,cache=TRUE}
 weather.d <- meteo_pull_monitors(sta.d$id,date_min = "2000-01-01")
 
 head(weather.d)
@@ -129,10 +139,14 @@ mc<- dat%>%
   group_by(species,year)%>%
   mutate(prop=cumsum(day.tot/sum(day.tot,na.rm = T)))%>%
   filter(year>1999)
+```
 
+```{r, echo=FALSE}
 mc%>%
   ggplot(aes(j.day,prop))+geom_point()+facet_wrap(year~.)
+```
 
+```{r, include=FALSE}
 mc.pred <- mc%>%
   group_by(year)%>%
  summarize(
@@ -140,17 +154,25 @@ mc.pred <- mc%>%
    j.day=min(j.day):max(j.day),
   )%>%
   left_join(mc%>%dplyr::select(j.day,date)) ## add date back to tibble
+```
 
+```{r, echo=FALSE,warning=FALSE}
 mc%>%
   ggplot(aes(j.day,prop))+geom_point(aes=0.3)+geom_line(data=mc.pred,aes(x=j.day,y=pred),col="blue",size=2)+facet_wrap(year~.)
+```
 
+```{r, include=FALSE}
 mc.arrive.date <-mc.pred%>%
   group_by(year)%>%
   filter(j.day==j.day[which.min(abs(pred-0.25))])
+```
 
+```{r, echo=FALSE}
 mc.arrive.date%>%
   ggplot(aes(year,j.day))+geom_point()
+```
 
+```{r, include=FALSE}
 weather.d <- weather.d%>%
   mutate(year=as.integer(str_sub(date,1,4)), #add year
          date=as.Date(date))%>%
@@ -188,7 +210,7 @@ mc.lmer <- lmer(j.day~tmin*tmax*wvec+(1|name),mc.arr.weath,na.action = "na.fail"
 
 Anova(mc.lmer) #Anova from the car package
 
-#0Mean two week weather preceding arrival
+#Mean two week weather preceding arrival
 mc.lmer2 <- lmer(j.day~wk.tmin*wk.tmax*wk.wvec+(1|name),mc.arr.weath2,na.action = "na.fail")
 
 Anova(mc.lmer2) 
@@ -196,9 +218,13 @@ Anova(mc.lmer2)
 mc.arr.aic <- dredge(mc.lmer2,fixed = c("wk.tmin","wk.tmax","wk.wvec"),)
 
 mc.kb <- kable(mc.arr.aic[1:4,],caption = "Fit values for nested models of the most complicated lme model")
+```
 
+```{r table, echo=FALSE}
 kable_styling(mc.kb)
+```
 
+```{r, include=FALSE}
 best.lmer <-  lmer(j.day~wk.tmin+wk.tmax+wk.wvec+(1|name),mc.arr.weath2,na.action = "na.fail")
 
 Anova(best.lmer)
@@ -213,7 +239,7 @@ Katherine: Methods<br>
 Rachel R: Results<br>
 Jessica: Discussion<br>
 
-##References 
+## References 
 
 
 
