--- a/Gone-Fishing_Mod8.Rmd
+++ b/Gone-Fishing_Mod8.Rmd
@@ -18,7 +18,7 @@ Our goal with this project is to use eBird and meteorological data to understand
 
 ## Methods 
 
-First we chose five trans-Gulf migrant (TGM) bird species to study, each bird species being from different families. The species we chose are as follows: Common Nighthawk (Chordeiles minor), Scarlet Tanager (Piranga olivacea), Cerulean Warbler (Setophaga cerulea), Baltimore Oriole (Icterus galbula), and Red-eyed vireo (Vireo olivaceus). Using the occ_data() function from rgbif, which searches GBIF occurrences, we then download the occurrence data for these species. We then used logistic modeling operations to predict the Julian day when 25% of the population arrives, aka the arrival time, for each year and for each species. Three locations were chosen along the assumed flight path of the birds, Mobile, AL being on the Gulf at the beginning of the route, Boston, MA being the end destination, and Charlotte, NC being about the middle of the journey. We used weather data from the NOAA website with the parameters of minimum and maximum temperature in tenths of degrees celsius (tmin), average wind velocity in m−s (awnd), and direction of fastest 2-minute wind (wdf2). To evaluate the effect of weather parameters on arrival time we used a linear mixed-effect modeling using lme4 package and lme4() function. Lastly we use the anova() function from the car package to look at the interactions and assesses the significance of the fixed effects.
+First we chose five trans-Gulf migrant (TGM) bird species to study, each bird species being from different families. The species we chose are as follows: Common Nighthawk (Chordeiles minor), Scarlet Tanager (Piranga olivacea), Cerulean Warbler (Setophaga cerulea), Baltimore Oriole (Icterus galbula), and Red-eyed vireo (Vireo olivaceus). Using the occ_data() function from rgbif, which searches GBIF occurrences, we then download the occurrence data for these species. We then used logistic modeling operations to predict the Julian day when 25% of the population arrives, aka the arrival time, for each year and for each species. Three locations were chosen along the assumed flight path of the birds, Mobile, AL being on the Gulf at the beginning of the route, Boston, MA being the end destination, and Charlotte, NC being about the middle of the journey. We used weather data from the NOAA website with the parameters of minimum and maximum temperature in tenths of degrees celsius (tmin), average wind velocity in m/s (awnd), and direction of fastest 2-minute wind (wdf2). To evaluate the effect of weather parameters on arrival time we used a linear mixed-effect modeling using lme4 package and lme4() function. Lastly we use the anova() function from the car package to look at the interactions and assesses the significance of the fixed effects.
 
 ## Results
 ```{r setup, include=FALSE}
