--- a/Gone-Fishing_Mod8.Rmd
+++ b/Gone-Fishing_Mod8.Rmd
@@ -233,6 +233,13 @@ Anova(best.lmer)
 ```
 
 ## Discussion
+Through utilizing meteorological and eBird data, the effect of temporal conditions on TGM arrival in Massachusetts were explained upon conducting various linear mixed-effect modeling. In terms of how arrival time varies according to temperature and wind variables, majority of the 5 species analyzed show a general trend of earlier arrival dates since 2000. One notable exception is *Setophaga cerulea*, where a positive correlation can be observed on the year vs. Julian day graph. 
+
+Through linear mixed-effect modeling, the best-fit model identified was with j.day~wk.tmin+wk.tmax+wk.wvec+(1|name), that is, with no interaction effect included between any of the variables. It was also found that wind vector best explains the trend in all except 1 of the 5 species, namely *Icterus galbula*. Maximum temperature was the only factor that was found to be a significant predictor of arrival time *Icterus galbula*. Minimum temperature was also found to best explain the data for species *Chordeiles minor*, *Piranga olivacea*, and *Setophaga cerulea*. 
+
+From these results, it can be reasonable assumed that climate change will, if not already has, played a role in the population status of TGMs arriving in MA during the spring. The graphs approximating annual arrival time for 25% of the species population to arrive in MA shown that most species are arriving earlier than expected, with times ranging somewhere around 5 to 10 days earlier. Higher global temperatures result in a significant shift in migratory patterns in both short- and long-distance migrants, a finding that contradicts the claims of previous studies suggesting that short-distance migrants in North America are changing their migration patterns more than long-distance migrants (SOURCE 1). Rapid adaptation to the changing climate can be beneficial in the sense that it can decrease population declines by finding alternative grounds and/or staying in suitable areas for a longer period of time to breed and find food (SOURCE 1). However, not all species react the same way to temperature changes and those that have been unsuccessful in shifting their migration patterns are likely to see a population decline over time. 
+
+In terms of the role that climatic variables play in long-distance migration of birds, previous studies have confirmed that wind vector, specifically tail-winds, are taken into account by long-distance migrants; tail-winds are considered a vital support for long-distance migrants to cover the extensive area that they do (SOURCE 2). This explains why we found that wind vector was a significant predictor of arrival time in nearly all of the species. 
 
 ## Author Contributions 
 Rachel Z: Introduction<br>
