--- a/Gone-Fishing_Mod8.Rmd
+++ b/Gone-Fishing_Mod8.Rmd
@@ -5,7 +5,7 @@ date: "2022-12-15"
 output: html_document
 bibliography: "biol3140.bib"
 ---
-## Introduction
+# Introduction
 The term trans-Gulf migrants or TGMs, refer to species of birds that fly non-stop over the Gulf of Mexico and arrive on land between Texas and Florida. They are part of a larger group of birds that undertake long-distance migrations from Central and South America to more temperate latitudes. 
 
 The time of arrival of these TGMs have quite a large effect on their rates of survival. One example of this is the red knot, or *Calidris canutus rufa*. In the spring, this species of bird travels from Tierra del Fuego to the Delaware Bay (a 30,000 km trip), and usually bulks up on horseshoe crab eggs in Delaware Bay before leaving to breed in Arctic polar deserts. From 1997-2002, a higher proportion of knots did not reach threshold departure masses, and the population size dropped from 51,000 to 37,000. This drop in population is assumed to be a result of birds arriving later in Delaware, after the horseshoe crab eggs had already been depleted. (@baker2004rapid)
@@ -16,11 +16,11 @@ In 2002, Cornell Laboratory of Ornithology and the National Audubon society crea
 
 Our goal with this project is to use eBird and meteorological data to understand the effect of local weather conditions when TGMs arrive in Massachusetts. 
 
-## Methods 
+# Methods 
 
 First we chose five trans-Gulf migrant (TGM) bird species to study, each bird species being from different families. The species we chose are as follows: Common Nighthawk (Chordeiles minor), Scarlet Tanager (Piranga olivacea), Cerulean Warbler (Setophaga cerulea), Baltimore Oriole (Icterus galbula), and Red-eyed vireo (Vireo olivaceus). Using the occ_data() function from rgbif, which searches GBIF occurrences, we then download the occurrence data for these species. We then used logistic modeling operations to predict the Julian day when 25% of the population arrives, aka the arrival time, for each year and for each species. Three locations were chosen along the assumed flight path of the birds, Mobile, AL being on the Gulf at the beginning of the route, Boston, MA being the end destination, and Charlotte, NC being about the middle of the journey. We used weather data from the NOAA website with the parameters of minimum and maximum temperature in tenths of degrees celsius (tmin), average wind velocity in m/s (awnd), and direction of fastest 2-minute wind (wdf2). To evaluate the effect of weather parameters on arrival time we used a linear mixed-effect modeling using lme4 package and lme4() function. Lastly we use the anova() function from the car package to look at the interactions and assesses the significance of the fixed effects.
 
-## Results
+# Results
 ```{r setup, include=FALSE}
 library(rgbif)
 library(tidyverse)
@@ -130,7 +130,9 @@ weather.d <- meteo_pull_monitors(sta.d$id,date_min = "2000-01-01")
 head(weather.d)
 ```
 
-```{r, echo=FALSE,warning=FALSE,message=FALSE}
+## Chordeiles minor
+
+```{r C. minor, echo=FALSE,warning=FALSE,message=FALSE}
 mc<- dat%>%
   filter(species=="Chordeiles minor")%>%
   group_by(year)%>%
@@ -225,7 +227,7 @@ mc.arr.aic <- dredge(mc.lmer2,fixed = c("wk.tmin","wk.tmax","wk.wvec"),)
 mc.kb <- kable(mc.arr.aic[1:4,],caption = "**Table 1.** Fit values for nested models of the most complicated linear mixed-effect model.")
 ```
 
-```{r table, echo=FALSE}
+```{r table 1, echo=FALSE}
 kable_styling(mc.kb)
 ```
 The first model shown in the table including minimum temperature, maximum temperature, and wind vector fits this data set best. 
@@ -236,7 +238,520 @@ best.lmer <-  lmer(j.day~wk.tmin+wk.tmax+wk.wvec+(1|name),mc.arr.weath2,na.actio
 Anova(best.lmer)
 ```
 
-## Discussion
+## Piranga olivacea
+
+```{r P. olivacea, echo=FALSE,warning=FALSE,message=FALSE}
+mc<- dat%>%
+  filter(species=="Piranga olivacea")%>%
+  group_by(year)%>%
+  mutate(date=as.Date(paste0(year,"-",month,"-",day)),
+         j.day=julian(date,origin=as.Date(paste0(unique(year),"-01-01")))
+  )%>%
+  group_by(species,year,j.day,date)%>%
+  summarise(day.tot=sum(individualCount,na.rm=T))%>%
+  group_by(species,year)%>%
+  mutate(prop=cumsum(day.tot/sum(day.tot,na.rm = T)))%>%
+  filter(year>1999)
+```
+
+```{r, include=FALSE}
+mc%>%
+  ggplot(aes(j.day,prop))+geom_point()+facet_wrap(year~.)
+```
+
+```{r, include=FALSE}
+mc.pred <- mc%>%
+  group_by(year)%>%
+ summarize(
+   pred=predict(nls(prop~SSlogis(j.day,Asym, xmid, scal)),newdata=data.frame(j.day=min(j.day):max(j.day))),#predict the logistic curve for each species
+   j.day=min(j.day):max(j.day),
+  )%>%
+  left_join(mc%>%dplyr::select(j.day,date)) ## add date back to tibble
+```
+
+```{r, echo=FALSE,warning=FALSE, fig.cap="**Fig. 6.** Proportion of the population of *Piranga olvivacea* that has arrived in Boston, MA by the given Julian day. Logistic models plotted in blue to estimate the arrival date."}
+mc%>%
+  ggplot(aes(j.day,prop))+geom_point(aes=0.3)+geom_line(data=mc.pred,aes(x=j.day,y=pred),col="blue",size=2)+facet_wrap(year~.)
+```
+The arrival data for *Piranga olivacea* is between 125 and 140 Julian days. This date can be closely predicated with a logistical model curve. 
+
+```{r, include=FALSE}
+mc.arrive.date <-mc.pred%>%
+  group_by(year)%>%
+  filter(j.day==j.day[which.min(abs(pred-0.25))])
+```
+
+```{r, echo=FALSE,fig.cap="**Fig. 7.** Julian day from each year corresponding to the arrival of 25% of the *Piranga olivacea* population to Boston, MA."}
+mc.arrive.date%>%
+  ggplot(aes(year,j.day))+geom_point()
+```
+When 25% of the TGM species has arrived in Boston, MA, the species can be said to have arrived to its spring range. The arrival dates for *Piranga olivacea* are scattered from 129 to 140, but show a slight downward trend toward a lower Julian date.
+
+```{r, include=FALSE}
+sts <- c(
+  "GHCND:USW00013894",
+  "GHCND:USW00013881",
+  "GHCND:USW00014739"
+)
+
+
+sta.d <- bind_rows( 
+  lapply(sts,function(x) ncdc_stations(stationid = x)$data ) 
+)%>%
+  mutate(usmap_transform(.,input_names = c("longitude","latitude"),output_names = c("longitude.1", "latitude.1")))%>% 
+  mutate(name=str_sub(name, -5,-4))%>%
+  mutate(migr.day=c(10,5,0))%>% 
+  separate(id,into = c("station.type","id"))%>%#
+  print()
+
+weather.d <- meteo_pull_monitors(sta.d$id,date_min = "2000-01-01")
+head(weather.d)
+```
+
+```{r, include=FALSE}
+weather.d <- weather.d%>%
+  mutate(year=as.integer(str_sub(date,1,4)), #add year
+         date=as.Date(date))%>%
+  group_by(year)%>% #group by year so we can compute julian day
+ mutate(j.day=julian(date,origin=as.Date(paste0(unique(year),"-01-01"))), #add julian day
+  date2=date,
+  wdir.rad=(180-abs(wdf2-180))*pi/180, #radians so we can use a trig function to compute wind vector, scale degrees first to 180 scale to 2x pi and subtract from 180 (wind comes out of a direction)
+  wvec=cos(wdir.rad)*-1*awnd # we want a negative value for positive value for 2x pi
+  )%>% #store day in new column
+  dplyr::select(id,year,date2,j.day,tmin,tmax,wvec)%>% #select the rows we need
+  left_join(sta.d%>%select(id,name,migr.day))%>% #add the station id info (ie. name)
+  mutate(j.day=j.day+migr.day)#make j.day ahead of BOS according to the migration days away so we can join weather along path
+
+mc.arr.weath <- mc.arrive.date%>%
+  left_join(weather.d)%>%
+  left_join(mc%>%dplyr::select(year,date,j.day))
+
+head(mc.arr.weath)
+
+weather.wk <-weather.d %>% 
+  group_by(year,name) %>% 
+  mutate(wk.tmin = frollmean(tmin, n=14,align="right"),
+         wk.tmax = frollmean(tmax, n=14,align="right"),
+         wk.wvec = frollmean(wvec, n=14,align="right")
+         )%>%
+  dplyr::select(j.day,date2,name,wk.tmin,wk.tmax,wk.wvec)
+
+mc.arr.weath2 <- mc.arrive.date%>%
+  left_join(weather.wk)
+
+head(mc.arr.weath2)
+
+#weather at 0, 5, and 10 days away from arrival
+mc.lmer <- lmer(j.day~tmin*tmax*wvec+(1|name),mc.arr.weath,na.action = "na.fail")
+
+Anova(mc.lmer) #Anova from the car package
+
+#Mean two week weather preceding arrival
+mc.lmer2 <- lmer(j.day~wk.tmin*wk.tmax*wk.wvec+(1|name),mc.arr.weath2,na.action = "na.fail")
+
+Anova(mc.lmer2) 
+
+mc.arr.aic <- dredge(mc.lmer2,fixed = c("wk.tmin","wk.tmax","wk.wvec"),)
+
+mc.kb <- kable(mc.arr.aic[1:4,],caption = "**Table 2.** Fit values for nested models of the most complicated linear mixed-effect model.")
+```
+
+```{r table 2, echo=FALSE}
+kable_styling(mc.kb)
+```
+The first model shown in the table including minimum temperature, maximum temperature, and wind vector fits this data set best. 
+
+```{r, include=FALSE}
+best.lmer <-  lmer(j.day~wk.tmin+wk.tmax+wk.wvec+(1|name),mc.arr.weath2,na.action = "na.fail")
+
+Anova(best.lmer)
+```
+
+
+## Setophaga cerulea
+```{r S. cerulea, echo=FALSE,warning=FALSE,message=FALSE}
+mc<- dat%>%
+  filter(species=="Setophaga cerulea")%>%
+  group_by(year)%>%
+  mutate(date=as.Date(paste0(year,"-",month,"-",day)),
+         j.day=julian(date,origin=as.Date(paste0(unique(year),"-01-01")))
+  )%>%
+  group_by(species,year,j.day,date)%>%
+  summarise(day.tot=sum(individualCount,na.rm=T))%>%
+  group_by(species,year)%>%
+  mutate(prop=cumsum(day.tot/sum(day.tot,na.rm = T)))%>%
+  filter(year>1999)
+```
+
+```{r, include=FALSE}
+mc%>%
+  ggplot(aes(j.day,prop))+geom_point()+facet_wrap(year~.)
+```
+
+```{r, include=FALSE}
+mc.pred <- mc%>%
+  group_by(year)%>%
+ summarize(
+   pred=predict(nls(prop~SSlogis(j.day,Asym, xmid, scal)),newdata=data.frame(j.day=min(j.day):max(j.day))),#predict the logistic curve for each species
+   j.day=min(j.day):max(j.day),
+  )%>%
+  left_join(mc%>%dplyr::select(j.day,date)) ## add date back to tibble
+```
+
+```{r, echo=FALSE,warning=FALSE, fig.cap="**Fig. 8.** Proportion of the population of *Setophaga cerulea* that has arrived in Boston, MA by the given Julian day. Logistic models plotted in blue to estimate the arrival date."}
+mc%>%
+  ggplot(aes(j.day,prop))+geom_point(aes=0.3)+geom_line(data=mc.pred,aes(x=j.day,y=pred),col="blue",size=2)+facet_wrap(year~.)
+```
+The arrival data for *Setophaga cerulea* is between 120 and 150 Julian days. This date can be closely predicated with a logistical model curve. 
+
+```{r, include=FALSE}
+mc.arrive.date <-mc.pred%>%
+  group_by(year)%>%
+  filter(j.day==j.day[which.min(abs(pred-0.25))])
+```
+
+```{r, echo=FALSE,fig.cap="**Fig. 9.** Julian day from each year corresponding to the arrival of 25% of the *Setophaga cerulea* population to Boston, MA."}
+mc.arrive.date%>%
+  ggplot(aes(year,j.day))+geom_point()
+```
+When 25% of the TGM species has arrived in Boston, MA, the species can be said to have arrived to its spring range. The arrival dates for *Setophaga cerulea* are scattered from 120 to 150, but show a slight upward trend toward a higher Julian date.
+
+```{r, include=FALSE}
+sts <- c(
+  "GHCND:USW00013894",
+  "GHCND:USW00013881",
+  "GHCND:USW00014739"
+)
+
+
+sta.d <- bind_rows( 
+  lapply(sts,function(x) ncdc_stations(stationid = x)$data ) 
+)%>%
+  mutate(usmap_transform(.,input_names = c("longitude","latitude"),output_names = c("longitude.1", "latitude.1")))%>% 
+  mutate(name=str_sub(name, -5,-4))%>%
+  mutate(migr.day=c(10,5,0))%>% 
+  separate(id,into = c("station.type","id"))%>%#
+  print()
+
+weather.d <- meteo_pull_monitors(sta.d$id,date_min = "2000-01-01")
+head(weather.d)
+```
+
+```{r, include=FALSE}
+weather.d <- weather.d%>%
+  mutate(year=as.integer(str_sub(date,1,4)), #add year
+         date=as.Date(date))%>%
+  group_by(year)%>% #group by year so we can compute julian day
+ mutate(j.day=julian(date,origin=as.Date(paste0(unique(year),"-01-01"))), #add julian day
+  date2=date,
+  wdir.rad=(180-abs(wdf2-180))*pi/180, #radians so we can use a trig function to compute wind vector, scale degrees first to 180 scale to 2x pi and subtract from 180 (wind comes out of a direction)
+  wvec=cos(wdir.rad)*-1*awnd # we want a negative value for positive value for 2x pi
+  )%>% #store day in new column
+  dplyr::select(id,year,date2,j.day,tmin,tmax,wvec)%>% #select the rows we need
+  left_join(sta.d%>%select(id,name,migr.day))%>% #add the station id info (ie. name)
+  mutate(j.day=j.day+migr.day)#make j.day ahead of BOS according to the migration days away so we can join weather along path
+
+mc.arr.weath <- mc.arrive.date%>%
+  left_join(weather.d)%>%
+  left_join(mc%>%dplyr::select(year,date,j.day))
+
+head(mc.arr.weath)
+
+weather.wk <-weather.d %>% 
+  group_by(year,name) %>% 
+  mutate(wk.tmin = frollmean(tmin, n=14,align="right"),
+         wk.tmax = frollmean(tmax, n=14,align="right"),
+         wk.wvec = frollmean(wvec, n=14,align="right")
+         )%>%
+  dplyr::select(j.day,date2,name,wk.tmin,wk.tmax,wk.wvec)
+
+mc.arr.weath2 <- mc.arrive.date%>%
+  left_join(weather.wk)
+
+head(mc.arr.weath2)
+
+#weather at 0, 5, and 10 days away from arrival
+mc.lmer <- lmer(j.day~tmin*tmax*wvec+(1|name),mc.arr.weath,na.action = "na.fail")
+
+Anova(mc.lmer) #Anova from the car package
+
+#Mean two week weather preceding arrival
+mc.lmer2 <- lmer(j.day~wk.tmin*wk.tmax*wk.wvec+(1|name),mc.arr.weath2,na.action = "na.fail")
+
+Anova(mc.lmer2) 
+
+mc.arr.aic <- dredge(mc.lmer2,fixed = c("wk.tmin","wk.tmax","wk.wvec"),)
+
+mc.kb <- kable(mc.arr.aic[1:4,],caption = "**Table 3.** Fit values for nested models of the most complicated linear mixed-effect model.")
+```
+
+```{r table 3, echo=FALSE}
+kable_styling(mc.kb)
+```
+The first model shown in the table including minimum temperature, maximum temperature, and wind vector fits this data set best. 
+
+```{r, include=FALSE}
+best.lmer <-  lmer(j.day~wk.tmin+wk.tmax+wk.wvec+(1|name),mc.arr.weath2,na.action = "na.fail")
+
+Anova(best.lmer)
+```
+
+## Icterus galbula
+```{r I. galbula, echo=FALSE,warning=FALSE,message=FALSE}
+mc<- dat%>%
+  filter(species=="Icterus galbula")%>%
+  group_by(year)%>%
+  mutate(date=as.Date(paste0(year,"-",month,"-",day)),
+         j.day=julian(date,origin=as.Date(paste0(unique(year),"-01-01")))
+  )%>%
+  group_by(species,year,j.day,date)%>%
+  summarise(day.tot=sum(individualCount,na.rm=T))%>%
+  group_by(species,year)%>%
+  mutate(prop=cumsum(day.tot/sum(day.tot,na.rm = T)))%>%
+  filter(year>1999)
+```
+
+```{r, include=FALSE}
+mc%>%
+  ggplot(aes(j.day,prop))+geom_point()+facet_wrap(year~.)
+```
+
+```{r, include=FALSE}
+mc.pred <- mc%>%
+  group_by(year)%>%
+ summarize(
+   pred=predict(nls(prop~SSlogis(j.day,Asym, xmid, scal)),newdata=data.frame(j.day=min(j.day):max(j.day))),#predict the logistic curve for each species
+   j.day=min(j.day):max(j.day),
+  )%>%
+  left_join(mc%>%dplyr::select(j.day,date)) ## add date back to tibble
+```
+
+```{r, echo=FALSE,warning=FALSE, fig.cap="**Fig. 10.** Proportion of the population of *Icterus galbula* that has arrived in Boston, MA by the given Julian day. Logistic models plotted in blue to estimate the arrival date."}
+mc%>%
+  ggplot(aes(j.day,prop))+geom_point(aes=0.3)+geom_line(data=mc.pred,aes(x=j.day,y=pred),col="blue",size=2)+facet_wrap(year~.)
+```
+The arrival data for *Icterus galbula* is between 125 and 150 Julian days. This date can be closely predicated with a logistical model curve. 
+
+```{r, include=FALSE}
+mc.arrive.date <-mc.pred%>%
+  group_by(year)%>%
+  filter(j.day==j.day[which.min(abs(pred-0.25))])
+```
+
+```{r, echo=FALSE,fig.cap="**Fig. 11.** Julian day from each year corresponding to the arrival of 25% of the *Icterus galbula* population to Boston, MA."}
+mc.arrive.date%>%
+  ggplot(aes(year,j.day))+geom_point()
+```
+When 25% of the TGM species has arrived in Boston, MA, the species can be said to have arrived to its spring range. The arrival dates for *Icterus galbula* are scattered from 128 to 133, but from 2010-2019 have recently shown a slight upward trend toward a higher Julian date.
+
+```{r, include=FALSE}
+sts <- c(
+  "GHCND:USW00013894",
+  "GHCND:USW00013881",
+  "GHCND:USW00014739"
+)
+
+
+sta.d <- bind_rows( 
+  lapply(sts,function(x) ncdc_stations(stationid = x)$data ) 
+)%>%
+  mutate(usmap_transform(.,input_names = c("longitude","latitude"),output_names = c("longitude.1", "latitude.1")))%>% 
+  mutate(name=str_sub(name, -5,-4))%>%
+  mutate(migr.day=c(10,5,0))%>% 
+  separate(id,into = c("station.type","id"))%>%#
+  print()
+
+weather.d <- meteo_pull_monitors(sta.d$id,date_min = "2000-01-01")
+head(weather.d)
+```
+
+```{r, include=FALSE}
+weather.d <- weather.d%>%
+  mutate(year=as.integer(str_sub(date,1,4)), #add year
+         date=as.Date(date))%>%
+  group_by(year)%>% #group by year so we can compute julian day
+ mutate(j.day=julian(date,origin=as.Date(paste0(unique(year),"-01-01"))), #add julian day
+  date2=date,
+  wdir.rad=(180-abs(wdf2-180))*pi/180, #radians so we can use a trig function to compute wind vector, scale degrees first to 180 scale to 2x pi and subtract from 180 (wind comes out of a direction)
+  wvec=cos(wdir.rad)*-1*awnd # we want a negative value for positive value for 2x pi
+  )%>% #store day in new column
+  dplyr::select(id,year,date2,j.day,tmin,tmax,wvec)%>% #select the rows we need
+  left_join(sta.d%>%select(id,name,migr.day))%>% #add the station id info (ie. name)
+  mutate(j.day=j.day+migr.day)#make j.day ahead of BOS according to the migration days away so we can join weather along path
+
+mc.arr.weath <- mc.arrive.date%>%
+  left_join(weather.d)%>%
+  left_join(mc%>%dplyr::select(year,date,j.day))
+
+head(mc.arr.weath)
+
+weather.wk <-weather.d %>% 
+  group_by(year,name) %>% 
+  mutate(wk.tmin = frollmean(tmin, n=14,align="right"),
+         wk.tmax = frollmean(tmax, n=14,align="right"),
+         wk.wvec = frollmean(wvec, n=14,align="right")
+         )%>%
+  dplyr::select(j.day,date2,name,wk.tmin,wk.tmax,wk.wvec)
+
+mc.arr.weath2 <- mc.arrive.date%>%
+  left_join(weather.wk)
+
+head(mc.arr.weath2)
+
+#weather at 0, 5, and 10 days away from arrival
+mc.lmer <- lmer(j.day~tmin*tmax*wvec+(1|name),mc.arr.weath,na.action = "na.fail")
+
+Anova(mc.lmer) #Anova from the car package
+
+#Mean two week weather preceding arrival
+mc.lmer2 <- lmer(j.day~wk.tmin*wk.tmax*wk.wvec+(1|name),mc.arr.weath2,na.action = "na.fail")
+
+Anova(mc.lmer2) 
+
+mc.arr.aic <- dredge(mc.lmer2,fixed = c("wk.tmin","wk.tmax","wk.wvec"),)
+
+mc.kb <- kable(mc.arr.aic[1:4,],caption = "**Table 4.** Fit values for nested models of the most complicated linear mixed-effect model.")
+```
+
+```{r table 4, echo=FALSE}
+kable_styling(mc.kb)
+```
+The first model shown in the table including minimum temperature, maximum temperature, and wind vector fits this data set best. 
+
+```{r, include=FALSE}
+best.lmer <-  lmer(j.day~wk.tmin+wk.tmax+wk.wvec+(1|name),mc.arr.weath2,na.action = "na.fail")
+
+Anova(best.lmer)
+```
+
+## Vireo olivaceus
+```{r V. olivaceus, echo=FALSE,warning=FALSE,message=FALSE}
+mc<- dat%>%
+  filter(species=="Vireo olivaceus")%>%
+  group_by(year)%>%
+  mutate(date=as.Date(paste0(year,"-",month,"-",day)),
+         j.day=julian(date,origin=as.Date(paste0(unique(year),"-01-01")))
+  )%>%
+  group_by(species,year,j.day,date)%>%
+  summarise(day.tot=sum(individualCount,na.rm=T))%>%
+  group_by(species,year)%>%
+  mutate(prop=cumsum(day.tot/sum(day.tot,na.rm = T)))%>%
+  filter(year>1999)
+```
+
+```{r, include=FALSE}
+mc%>%
+  ggplot(aes(j.day,prop))+geom_point()+facet_wrap(year~.)
+```
+
+```{r, include=FALSE}
+mc.pred <- mc%>%
+  group_by(year)%>%
+ summarize(
+   pred=predict(nls(prop~SSlogis(j.day,Asym, xmid, scal)),newdata=data.frame(j.day=min(j.day):max(j.day))),#predict the logistic curve for each species
+   j.day=min(j.day):max(j.day),
+  )%>%
+  left_join(mc%>%dplyr::select(j.day,date)) ## add date back to tibble
+```
+
+```{r, echo=FALSE,warning=FALSE, fig.cap="**Fig. 12.** Proportion of the population of *Vireo olivaceus* that has arrived in Boston, MA by the given Julian day. Logistic models plotted in blue to estimate the arrival date."}
+mc%>%
+  ggplot(aes(j.day,prop))+geom_point(aes=0.3)+geom_line(data=mc.pred,aes(x=j.day,y=pred),col="blue",size=2)+facet_wrap(year~.)
+```
+The arrival data for *Vireo olivaceus* is between 130 and 160 Julian days. This date can be closely predicated with a logistical model curve. 
+
+```{r, include=FALSE}
+mc.arrive.date <-mc.pred%>%
+  group_by(year)%>%
+  filter(j.day==j.day[which.min(abs(pred-0.25))])
+```
+
+```{r, echo=FALSE,fig.cap="**Fig. 13.** Julian day from each year corresponding to the arrival of 25% of the *Vireo olivaceus* population to Boston, MA."}
+mc.arrive.date%>%
+  ggplot(aes(year,j.day))+geom_point()
+```
+When 25% of the TGM species has arrived in Boston, MA, the species can be said to have arrived to its spring range. The arrival dates for *Vireo olivaceus* are scattered from 137 to 147, but show a slight downward trend toward a lower Julian date.
+
+```{r, include=FALSE}
+sts <- c(
+  "GHCND:USW00013894",
+  "GHCND:USW00013881",
+  "GHCND:USW00014739"
+)
+
+
+sta.d <- bind_rows( 
+  lapply(sts,function(x) ncdc_stations(stationid = x)$data ) 
+)%>%
+  mutate(usmap_transform(.,input_names = c("longitude","latitude"),output_names = c("longitude.1", "latitude.1")))%>% 
+  mutate(name=str_sub(name, -5,-4))%>%
+  mutate(migr.day=c(10,5,0))%>% 
+  separate(id,into = c("station.type","id"))%>%#
+  print()
+
+weather.d <- meteo_pull_monitors(sta.d$id,date_min = "2000-01-01")
+head(weather.d)
+```
+
+```{r, include=FALSE}
+weather.d <- weather.d%>%
+  mutate(year=as.integer(str_sub(date,1,4)), #add year
+         date=as.Date(date))%>%
+  group_by(year)%>% #group by year so we can compute julian day
+ mutate(j.day=julian(date,origin=as.Date(paste0(unique(year),"-01-01"))), #add julian day
+  date2=date,
+  wdir.rad=(180-abs(wdf2-180))*pi/180, #radians so we can use a trig function to compute wind vector, scale degrees first to 180 scale to 2x pi and subtract from 180 (wind comes out of a direction)
+  wvec=cos(wdir.rad)*-1*awnd # we want a negative value for positive value for 2x pi
+  )%>% #store day in new column
+  dplyr::select(id,year,date2,j.day,tmin,tmax,wvec)%>% #select the rows we need
+  left_join(sta.d%>%select(id,name,migr.day))%>% #add the station id info (ie. name)
+  mutate(j.day=j.day+migr.day)#make j.day ahead of BOS according to the migration days away so we can join weather along path
+
+mc.arr.weath <- mc.arrive.date%>%
+  left_join(weather.d)%>%
+  left_join(mc%>%dplyr::select(year,date,j.day))
+
+head(mc.arr.weath)
+
+weather.wk <-weather.d %>% 
+  group_by(year,name) %>% 
+  mutate(wk.tmin = frollmean(tmin, n=14,align="right"),
+         wk.tmax = frollmean(tmax, n=14,align="right"),
+         wk.wvec = frollmean(wvec, n=14,align="right")
+         )%>%
+  dplyr::select(j.day,date2,name,wk.tmin,wk.tmax,wk.wvec)
+
+mc.arr.weath2 <- mc.arrive.date%>%
+  left_join(weather.wk)
+
+head(mc.arr.weath2)
+
+#weather at 0, 5, and 10 days away from arrival
+mc.lmer <- lmer(j.day~tmin*tmax*wvec+(1|name),mc.arr.weath,na.action = "na.fail")
+
+Anova(mc.lmer) #Anova from the car package
+
+#Mean two week weather preceding arrival
+mc.lmer2 <- lmer(j.day~wk.tmin*wk.tmax*wk.wvec+(1|name),mc.arr.weath2,na.action = "na.fail")
+
+Anova(mc.lmer2) 
+
+mc.arr.aic <- dredge(mc.lmer2,fixed = c("wk.tmin","wk.tmax","wk.wvec"),)
+
+mc.kb <- kable(mc.arr.aic[1:4,],caption = "**Table 5.** Fit values for nested models of the most complicated linear mixed-effect model.")
+```
+
+```{r table 5, echo=FALSE}
+kable_styling(mc.kb)
+```
+The first model shown in the table including minimum temperature, maximum temperature, and wind vector fits this data set best. 
+
+```{r, include=FALSE}
+best.lmer <-  lmer(j.day~wk.tmin+wk.tmax+wk.wvec+(1|name),mc.arr.weath2,na.action = "na.fail")
+
+Anova(best.lmer)
+```
+# Discussion
 Through utilizing meteorological and eBird data, the effect of temporal conditions on TGM arrival in Massachusetts were explained upon conducting various linear mixed-effect modeling. In terms of how arrival time varies according to temperature and wind variables, majority of the 5 species analyzed show a general trend of earlier arrival dates since 2000. One notable exception is *Setophaga cerulea*, where a positive correlation can be observed on the year vs. Julian day graph. 
 
 Through linear mixed-effect modeling, the best-fit model identified was with j.day~wk.tmin+wk.tmax+wk.wvec+(1|name), that is, with no interaction effect included between any of the variables. It was also found that wind vector best explains the trend in all except 1 of the 5 species, namely *Icterus galbula*. Maximum temperature was the only factor that was found to be a significant predictor of arrival time *Icterus galbula*. Minimum temperature was also found to best explain the data for species *Chordeiles minor*, *Piranga olivacea*, and *Setophaga cerulea*. 
